<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneMarket</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Menu Opened</string>
    <string name="drawer_close">Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Store</item>
        <item >Phone</item>
        <item >Laptop</item>
        <item >Tablet</item>
        <item >Game</item>
        <item >Accessories</item>
        <item >News</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_slide_store</item>
        <item>@drawable/ic_slide_phone</item>
        <item>@drawable/ic_slide_laptop</item>
        <item>@drawable/ic_slide_tablet</item>
        <item>@drawable/ic_slide_right_game</item>
        <item>@drawable/ic_slide_accessories</item>
        <item>@drawable/ic_slide_accessories</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="str_footer_home">Home</string>
    <string name="str_footer_search">Search</string>
    <string name="str_footer_cart">Cart</string>

    <string name="str_product_detail">Product Detail</string>

    <string name="str_specification">Specification</string>
    <string name="str_usercomment">Comments</string>

    <string name="str_in_stock">In Stock</string>
    <string name="str_out_of_stock">Out Of Stock</string>

    <string name="str_add_to_cart">Add To Cart</string>

    <string name="str_search_by">Search By</string>
    <string name="str_sort_by">Sort By</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_select">Select</string>

    <!--Product Detail Specification-->
    <string name="spec_general_info">GENERAL INFORMATION</string>
    <string name="spec_network_2g">2G Network</string>
    <string name="spec_network_3g">3G Network</string>
    <string name="spec_monitor">Monitor</string>
    <string name="spec_release_date">Release Date</string>
    <string name="spec_sale_date">Sale Date</string>
    <string name="spec_size">Size</string>
    <string name="spec_weight">Weight</string>
    <string name="spec_display">Display</string>
    <string name="spec_type">Type</string>
    <string name="spec_touch">Touch</string>
    <string name="spec_sound">Sound</string>
    <string name="spec_ring_type">Ring Type</string>
    <string name="spec_audio_output">Audio Output</string>
    <string name="spec_ram">Ram</string>
    <string name="spec_contact">Contact</string>
    <string name="spec_called_memory">Called Memory</string>
    <string name="spec_internal_memory">Internal Memory</string>
    <string name="spec_memory_slot">Memory Slot</string>
    <string name="spec_network">Network</string>
    <string name="spec_gprs">GPRS</string>
    <string name="spec_edge">EDGE</string>
    <string name="spec_nfc">NFC</string>
    <string name="spec_wlan">WLAN</string>
    <string name="spec_bluetooth">Bluetooth</string>
    <string name="spec_infrared">Infrared</string>
    <string name="spec_usb">USB</string>
    <string name="spec_camera">Camera</string>
    <string name="spec_front_camera">Front Camera</string>
    <string name="spec_rear_camera">Rear Camera</string>
    <string name="spec_camera_recorder">Camera Recorder</string>
    <string name="spec_os">Operating System</string>
    <string name="spec_cpu">CPU</string>
    <string name="spec_chipset">Chipset</string>
    <string name="spec_sms">SMS</string>
    <string name="spec_browser">Browser</string>
    <string name="spec_radio">Radio</string>
    <string name="spec_game">Game</string>


    <string name="comment_number">Number of Comments</string>
    <string name="comment_your_comment">Your Comment</string>
    <string name="comment_post">Post</string>

    <string name="str_empty_store">There is no product in stores</string>
    <string name="str_choose_store">Please choose a store</string>

    <!-- cart-->
    <string name="str_cart_total_item">There is %d items in cart</string>
    <string name="str_cart_price">Price</string>
    <string name="str_cart_fee">Fee</string>
    <string name="str_cart_total">Total</string>
    <string name="str_cart_payment">Payment</string>

    <string name="str_color">Color :</string>
    <string name="str_quantity">Số lượng :</string>

    <!-- user inf -->
    <string name="str_user_info_tittle">User Information</string>
    <string name="str_user_info_name">User Name</string>
    <string name="str_user_info_address">Address</string>
    <string name="str_user_info_city">City</string>
    <string name="str_user_info_phone">Phone</string>
    <string name="str_user_info_email">Email</string>
    <string name="str_user_info_payment_type">Payment Type</string>
    <string name="str_user_info_delivery_type">Delivery Type</string>
    <string name="str_user_info_note">Note</string>
    <string name="str_user_info_confirm">Confirm</string>

    <string name="str_user_info_paymenttype_cash">Cash</string>
    <string name="str_user_info_paymenttype_online">Online</string>
    <string name="error_userinfo_address">Please input your address</string>
    <string name="error_userinfo_phone">Please input your phone number</string>
    <string name="error_userinfo_paymenttype">Please select payment method</string>
    <string name="error_userinfo_deliverytype">Please select delivery method</string>
    <string name="error_userinfo_city">Please select your city</string>
    <string name="error_userinfo_name">Name cannot be empty</string>
    <string name="error_userinfo_email">Email cannot be empty</string>

</resources>
