<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/tabbar_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/red" android:layout_width="fill_parent" android:layout_height="@dimen/title_height">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/top_right" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <ImageView android:id="@id/top_menu_search" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_top_search" />
            <ImageView android:id="@id/top_menu_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_top_menu_right" />
        </LinearLayout>
        <ImageView android:id="@+id/userinfo_top_menu_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back" android:scaleType="centerCrop" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textAppearance="@style/TabTitleTextAppearance" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/str_user_info_tittle" android:maxLines="1" android:layout_toLeftOf="@id/top_right" android:layout_toRightOf="@id/userinfo_top_menu_left" />
    </RelativeLayout>
    <View android:background="@color/tabbar_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="top|center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/bg_slide_right">
            <TextView android:textAppearance="@style/TabTitleTextBlackAppearance" android:textStyle="normal" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_user_info_name" android:maxLines="1" />
            <EditText android:textAppearance="@style/FootMenuNavigationTextAppearance" android:gravity="left" android:id="@+id/userinfo_name" android:background="@drawable/bg_btn_cartitem" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/str_user_info_name" android:maxLines="1" />
            <TextView android:textAppearance="@style/TabTitleTextBlackAppearance" android:textStyle="normal" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_user_info_phone" android:maxLines="1" />
            <EditText android:textAppearance="@style/FootMenuNavigationTextAppearance" android:gravity="left" android:id="@+id/userinfo_phone" android:background="@drawable/bg_btn_cartitem" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/str_user_info_phone" android:maxLines="1" />
            <TextView android:textAppearance="@style/TabTitleTextBlackAppearance" android:textStyle="normal" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_user_info_email" android:maxLines="1" />
            <EditText android:textAppearance="@style/FootMenuNavigationTextAppearance" android:gravity="left" android:id="@+id/userinfo_email" android:background="@drawable/bg_btn_cartitem" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/str_user_info_email" android:maxLines="1" android:inputType="textEmailAddress" />
            <TextView android:textAppearance="@style/TabTitleTextBlackAppearance" android:textStyle="normal" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_user_info_address" android:maxLines="1" />
            <EditText android:textAppearance="@style/FootMenuNavigationTextAppearance" android:gravity="left" android:id="@+id/userinfo_address" android:background="@drawable/bg_btn_cartitem" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/str_user_info_address" android:maxLines="1" />
            <TextView android:textAppearance="@style/TabTitleTextBlackAppearance" android:textStyle="normal" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_user_info_city" android:maxLines="1" />
            <Spinner android:gravity="left" android:id="@+id/userinfo_city" android:background="@drawable/bg_btn_cartitem" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/str_user_info_city" />
            <TextView android:textAppearance="@style/TabTitleTextBlackAppearance" android:textStyle="normal" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_user_info_payment_type" android:maxLines="1" />
            <Spinner android:gravity="left" android:id="@+id/userinfo_payment_type" android:background="@drawable/bg_btn_cartitem" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/str_user_info_payment_type" />
            <TextView android:textAppearance="@style/TabTitleTextBlackAppearance" android:textStyle="normal" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_user_info_delivery_type" android:maxLines="1" />
            <Spinner android:gravity="left" android:id="@+id/userinfo_delivery_type" android:background="@drawable/bg_btn_cartitem" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/str_user_info_delivery_type" />
            <TextView android:textAppearance="@style/TabTitleTextBlackAppearance" android:textStyle="normal" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/str_user_info_note" android:maxLines="1" />
            <EditText android:textAppearance="@style/FootMenuNavigationTextAppearance" android:gravity="left" android:id="@+id/userinfo_note" android:background="@drawable/bg_btn_cartitem" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/str_user_info_note" android:maxLines="1" />
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@color/bg_cart1" android:layout_width="fill_parent" android:layout_height="80.0dip">
                <TextView android:textAppearance="@style/Cart_Payment" android:gravity="center" android:id="@+id/userinfo_confirm" android:background="@drawable/bg_btn_payment" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/str_user_info_confirm" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>