<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/bg_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/layout_footer_home" android:background="@color/footer_background" android:paddingTop="7.0dip" android:paddingBottom="2.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@+id/iv_footer_home" android:layout_width="@dimen/footer_icon_size" android:layout_height="@dimen/footer_icon_size" android:layout_marginBottom="2.0dip" android:src="@drawable/footer_home" android:contentDescription="@string/app_name" />
            <TextView android:id="@+id/tv_footer_home" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_footer_home" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/layout_footer_search" android:background="@color/footer_background" android:paddingTop="7.0dip" android:paddingBottom="2.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@+id/iv_footer_search" android:layout_width="@dimen/footer_icon_size" android:layout_height="@dimen/footer_icon_size" android:layout_marginBottom="2.0dip" android:src="@drawable/footer_search" android:contentDescription="@string/app_name" />
            <TextView android:id="@+id/tv_footer_search" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_footer_search" android:maxLines="1" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/layout_footer_cart" android:background="@color/footer_background" android:paddingTop="7.0dip" android:paddingBottom="2.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@+id/iv_footer_cart" android:layout_width="@dimen/footer_icon_size" android:layout_height="@dimen/footer_icon_size" android:layout_marginBottom="2.0dip" android:src="@drawable/footer_cart" android:contentDescription="@string/app_name" />
            <TextView android:id="@+id/tv_footer_cart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_footer_cart" android:maxLines="1" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>