<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@+id/searchby_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
    <ImageView android:id="@+id/arrow_up" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/arrow_up" />
    <LinearLayout android:orientation="vertical" android:id="@+id/tracks" android:background="@drawable/bg_quick_action" android:paddingLeft="-2.0dip" android:paddingTop="4.0dip" android:paddingRight="-2.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/searchby_header">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/red" android:gravity="center|left" android:id="@+id/tv_searchby_cancel" android:layout_width="wrap_content" android:layout_height="@dimen/second_tab_top_height" android:text="@string/str_cancel" />
            <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:id="@+id/tv_searchby_title" android:layout_width="0.0dip" android:layout_height="@dimen/second_tab_top_height" android:text="@string/str_search_by" android:singleLine="true" android:layout_weight="1.0" />
            <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/red" android:gravity="center|right" android:id="@+id/tv_searchby_select" android:layout_width="wrap_content" android:layout_height="@dimen/second_tab_top_height" android:text="@string/str_select" />
        </LinearLayout>
        <View android:background="@color/tabbar_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <ImageView android:id="@+id/arrow_down" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-1.0dip" android:src="@drawable/arrow_down" android:layout_below="@id/tracks" />
</RelativeLayout>