<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical" android:background="@color/tabbar_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:background="@color/red" android:layout_width="fill_parent" android:layout_height="@dimen/title_height">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/top_right_cart" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true">
                <ImageView android:id="@+id/top_menu_search_cart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_top_search" />
                <ImageView android:id="@+id/top_menu_right_cart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_top_menu_right" />
            </LinearLayout>
            <ImageView android:id="@+id/top_menu_left_cart" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_back" android:scaleType="centerCrop" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textAppearance="@style/TabTitleTextAppearance" android:gravity="center" android:id="@id/title" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/str_footer_cart" android:layout_toLeftOf="@+id/top_right_cart" android:layout_toRightOf="@id/top_menu_left_cart" />
        </RelativeLayout>
        <View android:background="@color/tabbar_divider" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:orientation="vertical" android:id="@+id/ll_cart_total_item" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/RedTextDS4Appearance" android:gravity="center|left" android:id="@+id/tv_cart_total_item" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/second_tab_top_height" android:text="@string/str_cart_total_item" android:maxLines="1" />
            <View android:background="@color/tabbar_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        </LinearLayout>
        <ScrollView android:id="@+id/sv_cart_payment" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@+id/cart_listViewCart" android:background="@color/bg_cart_gridview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
                <TextView android:textAppearance="@style/Cart_Price_Total" android:gravity="center" android:id="@+id/tv_cart_totalprice" android:background="@color/bg_cart1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_cart_total" />
                <LinearLayout android:orientation="horizontal" android:background="@color/bg_cart2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="@style/Cart_Price" android:gravity="left" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_cart_price" android:layout_weight="1.0" />
                    <TextView android:textAppearance="@style/Cart_Price" android:gravity="left" android:id="@+id/tv_cart_price" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:background="@color/bg_cart1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="@style/Cart_Price" android:gravity="left" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_cart_fee" android:layout_weight="1.0" />
                    <TextView android:textAppearance="@style/Cart_Price" android:gravity="left" android:id="@+id/tv_cart_transport_fee" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:background="@color/bg_cart2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="@style/Cart_Price" android:gravity="left" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_cart_total" android:layout_weight="1.0" />
                    <TextView android:textAppearance="@style/Cart_Price" android:gravity="left" android:id="@+id/tv_cart_item_total" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@color/bg_cart1" android:layout_width="fill_parent" android:layout_height="80.0dip">
                    <TextView android:textAppearance="@style/Cart_Payment" android:gravity="center" android:id="@+id/tv_cart_payment" android:background="@drawable/bg_btn_payment" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/str_cart_payment" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    

</RelativeLayout>
